Added user's avatar to each trip

--- a/templates/trips.html
+++ b/templates/trips.html
@@ -37,7 +37,14 @@
         <tr class="collapsible-header col s12 m6 l6 xl6">
             <td>
                 <strong>{{trip.user}}</strong>
-                <div class="avatar-image"></div>
+                <div class="avatar-image">
+                    {% for user in users %}
+                        {% if trip.user|lower == user.name|lower %}
+                            <img src="{{user.avatar}}" width="25" height="25"/>
+                            {% break %}
+                        {% endif %}
+                    {% endfor %} 
+                </div>
             </td>
             <td>
                 <a href="{{ url_for('ski_resorts')}}"><strong>{{trip.location_name}}</strong></a>
