Updated some bugs in Testing.md

--- a/templates/base.html
+++ b/templates/base.html
@@ -70,11 +70,9 @@
             today: 'Today',
             clear: 'Clear',
             close: 'Ok',
-            format: 'yyyy-dd-mm'
+            format: 'yyyy.dd.mm'
         }); 
     });
-
-       
-    </script>
+   </script>
 </body>
 </html>
