Formatted date format in add_trip.html for easier sorting display of trips

--- a/templates/base.html
+++ b/templates/base.html
@@ -70,7 +70,7 @@
             today: 'Today',
             clear: 'Clear',
             close: 'Ok',
-            format: 'yyyy.dd.mm'
+            format: 'yyyy.mm.dd'
         }); 
     });
    </script>
