--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,13 @@
     <!-- favicon file -->
     <link rel="icon" href="{{ url_for('static', filename='img/favicon/ski_favicon_32.png') }}" type="image/x-icon">
     <!--Font Awesome style link-->
-    <script src="https://use.fontawesome.com/3c5ef3c040.js"></script>
+    <script src="https://kit.fontawesome.com/9e99644672.js" crossorigin="anonymous"></script>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="~/lib/Font-Awesome/css/fontawesome.min.css">
+    <link rel="stylesheet" href="~/lib/Font-Awesome/css/regular.min.css">
+    <link rel="stylesheet" href="~/lib/Font-Awesome/css/solid.min.css">
+    <!--Bootstrap CSS links-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
