--- a/templates/index.html
+++ b/templates/index.html
@@ -7,12 +7,12 @@
             <div class="card-panel blue darken-2">
                 <span class="white-text text-darken-2">
                     <p class="intro-title">START / JOIN A SNOW TEAM</p>
-                    <ul>
-                        <li>Sign Up</li>
-                        <li>Post your trips</li>
-                        <li>Search through trips</li>
-                        <li>Team Up</li>
-                        <li>Have fun on the slopes!</li>
+                    <ul id="index-list">
+                        <li><i class="fa fa-user-plus fa-fw"></i>&nbsp;&nbsp;&nbsp;SIGN UP</li>
+                        <li><i class="fa fa-tram fa-fw"></i>&nbsp;&nbsp;&nbsp;POST TRIPS</li>
+                        <li><i class="fa fa-searchengin fa-fw"></i>&nbsp;&nbsp;&nbsp;SEARCH TRIPS</li>
+                        <li><i class="fa fa-users fa-fw"></i>&nbsp;&nbsp;&nbsp;TEAM UP</li>
+                        <li><i class="fa fa-skiing fa-fw"></i>&nbsp;&nbsp;&nbsp;HIT THE SLOPES!</li>
                     </ul>
                 </span>
             </div>
