--- a/templates/trips.html
+++ b/templates/trips.html
@@ -12,11 +12,11 @@
             </div>
             <div class="input-field col s6 m6">
                 <i class="small material-icons prefix">today</i>
-                <input placeholder="from" type="text" name="query_from" id="query_from" class="validate datepicker">
+                <input placeholder="date from" type="text" name="query_from" id="query_from" class="validate datepicker">
             </div>
             <div class="input-field col s6 m6">
                 <i class="small material-icons prefix">today</i>
-                <input placeholder="to" type="text" name="query_to" id="query_to" class="validate datepicker">
+                <input placeholder="date to" type="text" name="query_to" id="query_to" class="validate datepicker">
             </div>
             <div class="row col s12 m4">
                 <a href="{{ url_for('trips') }}" class="red btn text-shadow">Reset</a>
