--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
                         <li><i class="fa fa-user-plus fa-fw"></i>&nbsp;&nbsp;&nbsp;SIGN UP</li>
                         <li><i class="fa fa-tram fa-fw"></i>&nbsp;&nbsp;&nbsp;POST TRIPS</li>
                         <li><i class="fa fa-searchengin fa-fw"></i>&nbsp;&nbsp;&nbsp;SEARCH TRIPS</li>
-                        <li><i class="fa fa-users fa-fw"></i>&nbsp;&nbsp;&nbsp;TEAM UP</li>
+                        <li><i class="fas fa-user-friends fa-fw"></i>&nbsp;&nbsp;&nbsp;TEAM UP</li>
                         <li><i class="fa fa-skiing fa-fw"></i>&nbsp;&nbsp;&nbsp;HIT THE SLOPES!</li>
                     </ul>
                 </span>
