--- a/templates/ski_resorts.html
+++ b/templates/ski_resorts.html
@@ -1,7 +1,7 @@
 {% extends 'base.html'%} 
 {% block content %}
 
-<div class="row card-panel">
+<div id="search-skiresorts-panel" class="row card-panel">
     <h5 class="center">SEARCH SKI RESORTS</h5> 
     <form action="{{ url_for('search_ski_resorts') }}" method="post" class="col s12">
         <div class="row valign-wrapper center-align">
@@ -22,8 +22,8 @@
     <tbody>
     {% for skiresort in skiresorts|sort(attribute="location_name") %} 
         <tr>
-            <td>
-                <div class="card">
+            <td class="td">
+                <div class="card ski-resort-card">
                     <div class="card-content row">
                         <div class="col s4 m4 l4">
                             <div class="row">
