Some css for search buttons

--- a/templates/ski_resorts.html
+++ b/templates/ski_resorts.html
@@ -11,8 +11,7 @@
             </div>
             <div class="row col s12 m4">
                 <a href="{{ url_for('ski_resorts') }}" class="red btn text-shadow">Reset</a>
-                <button type="submit" class="light-blue btn text-shadow">
-                <i class="small material-icons prefix">search</i>Search</button>
+                <button type="submit" class="light-blue btn text-shadow">Search</button>
             </div>
         </div>
     </form>
