--- a/static/css/style.css
+++ b/static/css/style.css
@@ -65,8 +65,8 @@ body{
 
 .btn{
     background-color: #336C8F;
-    font-size: 10px;
-    padding: 5px;
+    font-size: 12px;
+    margin: 3px 2px 3px 0;
 }
 
 .btn.waves-effect{
