Added trips search functionality

--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
     {% include 'index_nav.html' %}
     {% endif %}
 
-    <div id="main-container" class="container">        
+    <div class="container">        
         <div class="message-board white justify-content-center">
             <!-- Flash messages -->
             {% with messages = get_flashed_messages() %}
