Added Go Back button to no_permission.html

--- a/templates/no_permission.html
+++ b/templates/no_permission.html
@@ -9,6 +9,7 @@
                     <p class="intro-title">PERMISSION DENIED</p>
                     <p><i class="white large material-icons prefix">fingerprint</i></p>
                     <p>You have no rights to edit or delete this listing.</p>
+                    <a href="#" onclick="history.back()"><i class="fas fa-undo-alt"></i></a>
                 </span>
             </div>
         </div>
