--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -23,7 +23,7 @@
                                 </div>
                                 <div class="input-field col s12 m12 l6">
                                     <i class="material-icons prefix">date_range</i>
-                                    <select class="icons dropdown-content" id="ageRange" name="ageRange" required aria-required="true">
+                                    <select class="icons dropdown-content validate" id="ageRange" name="ageRange" required aria-required="true">
                                         <option value="1" selected>Your age</option>
                                         <option value="18-25">18 to 25</option>
                                         <option value="26-32">26 to 32</option>
@@ -38,7 +38,7 @@
                                 </div>
                                 <div class="input-field col s12 m12 l6">
                                     <i class="material-icons prefix">face</i>
-                                    <select class="icons dropdown-content" id="avatar" name="avatar" aria-required="true" required>
+                                    <select class="icons dropdown-content validate" id="avatar" name="avatar" aria-required="true" required>
                                         <option value="1" selected>Choose your Avatar</option>
                                         <option value="/static/img/avatar/boot.png" data-icon="/static/img/avatar/boot.png">SkiBoot</option>
                                         <option value="/static/img/avatar/cabin.png" data-icon="/static/img/avatar/cabin.png">Cabin</option>
