--- a/templates/base.html
+++ b/templates/base.html
@@ -58,21 +58,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>    
     
     <!--Local Javascript link-->
-    <script type="text/javascript">
-    $(document).ready(function(){
-        $('.collapsible').collapsible();
-        $('.sidenav').sidenav();
-        $('select').formSelect();
-        $('.modal').modal();
-        $('.datepicker').datepicker({
-            selectMonths: true,
-            selectYears: 3, 
-            today: 'Today',
-            clear: 'Clear',
-            close: 'Ok',
-            format: 'yyyy.mm.dd'
-        }); 
-    });
-   </script>
+    <script src="{{ url_for('static', filename='js/app.js') }}"></script>
+    
 </body>
 </html>
