Partly cleaned app.py code

--- a/templates/add_skiresort.html
+++ b/templates/add_skiresort.html
@@ -36,7 +36,7 @@
                             <i class="small material-icons prefix">comment</i>
                             <input placeholder="additional info" id="other_info" name="other_info" type="text" class="validate" required>
                         </div>
-                        <div class="input-field col s12 m12 l6">
+                        <div class="input-field col s12 m12 l6 select-wrapper">
                             <i class="material-icons prefix">face</i>
                             <select class="icons dropdown-content" id="thumbnail" name="thumbnail" required="" aria-required="true">
                             <option value="1" selected>Choose a Thumbnail</option>
