Changed gender choice into a selector

--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -19,7 +19,11 @@
                                 </div>
                                 <div class="input-field col s12 m12 l6">
                                     <i class="material-icons prefix">wc</i>
-                                    <input placeholder="male or female" id="gender" name="gender" type="text" class="validate" required>
+                                    <select class="icons dropdown-content" id="gender" name="gender" required aria-required="true">
+                                        <option value="1" selected>Your gender</option>
+                                        <option value="male">Male</option>
+                                        <option value="Female">Female</option>
+                                    </select>
                                 </div>
                                 <div class="input-field col s12 m12 l6">
                                     <i class="material-icons prefix">date_range</i>
@@ -34,7 +38,7 @@
                                 </div>
                                 <div class="input-field col s12 m12 l6">
                                     <i class="material-icons prefix">location_city</i>
-                                    <input placeholder="you are from:" id="from" name="from" type="text" class="validate" required>
+                                    <input placeholder="you are from" id="from" name="from" type="text" class="validate" required>
                                 </div>
                                 <div class="input-field col s12 m12 l6">
                                     <i class="material-icons prefix">face</i>
