--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -22,7 +22,7 @@
                                     <select class="icons dropdown-content" id="gender" name="gender" required aria-required="true">
                                         <option value="1" selected>Your gender</option>
                                         <option value="male">Male</option>
-                                        <option value="Female">Female</option>
+                                        <option value="female">Female</option>
                                     </select>
                                 </div>
                                 <div class="input-field col s12 m12 l6">
