Partly fixed select validation

--- a/templates/add_trip.html
+++ b/templates/add_trip.html
@@ -39,7 +39,11 @@
                         </div>
                         <div class="input-field col s12 m6 l6">
                             <i class="material-icons prefix">ac_unit</i>
-                            <input placeholder="ski or snowboard" id="ski_snowboard" name="ski_snowboard" type="text" class="validate" required>
+                            <select class="validate" id="ski_snowboard" name="ski_snowboard" required aria-required="true">
+                                <option value="" disabled selected>Ski/Snowboard</option>
+                                <option value="ski">Ski</option>
+                                <option value="Snowboard">Snowboard</option>
+                            </select>
                         </div>
                         <div class="input-field col s12 m12 l12">
                             <i class="small material-icons prefix">comment</i>
