--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -19,16 +19,16 @@
                                 </div>
                                 <div class="input-field col s12 m12 l6">
                                     <i class="material-icons prefix">wc</i>
-                                    <select class="icons dropdown-content" id="gender" name="gender" required aria-required="true">
-                                        <option value="1" selected>Your gender</option>
+                                    <select class="validate" id="gender" name="gender" required aria-required="true">
+                                        <option value="" disabled selected>Your gender</option>
                                         <option value="male">Male</option>
                                         <option value="female">Female</option>
                                     </select>
                                 </div>
                                 <div class="input-field col s12 m12 l6">
                                     <i class="material-icons prefix">date_range</i>
-                                    <select class="icons dropdown-content validate" id="ageRange" name="ageRange" required aria-required="true">
-                                        <option value="1" selected>Your age</option>
+                                    <select class="validate" id="ageRange" name="ageRange" required aria-required="true">
+                                        <option value="" disabled selected>Your age</option>
                                         <option value="18-25">18 to 25</option>
                                         <option value="26-32">26 to 32</option>
                                         <option value="33-40">33 to 40</option>
@@ -43,7 +43,7 @@
                                 <div class="input-field col s12 m12 l6">
                                     <i class="material-icons prefix">face</i>
                                     <select class="icons dropdown-content validate" id="avatar" name="avatar" aria-required="true" required>
-                                        <option value="1" selected>Choose your Avatar</option>
+                                        <option value="" disabled selected>Choose your Avatar</option>
                                         <option value="/static/img/avatar/boot.png" data-icon="/static/img/avatar/boot.png">SkiBoot</option>
                                         <option value="/static/img/avatar/cabin.png" data-icon="/static/img/avatar/cabin.png">Cabin</option>
                                         <option value="/static/img/avatar/coffee.png" data-icon="/static/img/avatar/coffee.png">Coffee</option>
