--- a/templates/add_skiresort.html
+++ b/templates/add_skiresort.html
@@ -27,7 +27,7 @@
                         <div class="input-field col s12 m12 l6">
                             <i class="material-icons prefix">terrain</i>
                             <select class="icons dropdown-content validate" id="glacier" name="glacier" required aria-required="true">
-                                <option value="1" selected>Glacier</option>
+                                <option value="" disabled selected>Glacier</option>
                                 <option value="yes">Yes</option>
                                 <option value="no">No</option>
                             </select>
@@ -35,7 +35,7 @@
                         <div class="input-field col s12 m12 l6">
                             <i class="material-icons prefix">brightness_3</i>
                             <select class="icons dropdown-content validate" id="night" name="night" required aria-required="true">
-                                <option value="1" selected>Night skiing</option>
+                                <option value="" disabled selected>Night skiing</option>
                                 <option value="yes">Yes</option>
                                 <option value="no">No</option>
                             </select>
@@ -44,10 +44,10 @@
                             <i class="small material-icons prefix">comment</i>
                             <input placeholder="additional info" id="other_info" name="other_info" type="text" class="validate" required>
                         </div>
-                        <div class="input-field col s12 m12 l6 select-wrapper">
+                        <div class="input-field col s12 m12 l6">
                             <i class="material-icons prefix">face</i>
                             <select class="validate icons dropdown-content " id="thumbnail" name="thumbnail" required>
-                            <option value="1" selected>Choose a Thumbnail</option>
+                            <option value="" disabled selected>Choose a Thumbnail</option>
                             <option value="/static/img/resorts_thumbs/mountain01.png" data-icon="/static/img/resorts_thumbs/mountain01.png">Peak</option>
                             <option value="/static/img/resorts_thumbs/mountain02.png" data-icon="/static/img/resorts_thumbs/mountain02.png">Glacier</option>
                             <option value="/static/img/resorts_thumbs/mountain03.png" data-icon="/static/img/resorts_thumbs/mountain03.png">Map</option>
